--- a/styles/travel.css
+++ b/styles/travel.css
@@ -46,6 +46,8 @@ nav a{
     background-image: url(../images/Group\ 13\ \(1\)\ \(1\).png);
     background-repeat: no-repeat;
     background-position: center;
+    border-radius: 16px;
+background: linear-gradient(180deg, rgba(19, 19, 24, 0.751) 0%);
 }
 
 
@@ -66,6 +68,63 @@ text-align: center;
 .banner-description{
     color: #FFF;
 text-align: center;
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px; /* 162.5% */
+}
+
+.popular-tours{
+    margin-left: 200px;
+    margin-top: 100px;
+    color: #131318;
+font-family: Mulish;
+font-style: normal;
+line-height: normal;
+display: flex;
+}
+
+
+.popular-tours-1{
+    width: 577px;
+    color: rgba(19, 19, 24, 0.70);
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px; /* 162.5% */
+}
+.popular-tours-2{
+    width: 525px;
+    color: rgba(19, 19, 24, 0.70);
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px; /* 162.5% */
+}
+.popular-tours-3{
+    width: 525px;
+    color: rgba(19, 19, 24, 0.70);
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px; /* 162.5% */
+}
+.popular-tours-4{
+    width: 525px;
+    color: rgba(19, 19, 24, 0.70);
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px; /* 162.5% */
+}
+.popular-tours-5{
+    width: 530px;
+    color: #5A5A5D;
 font-family: Mulish;
 font-size: 16px;
 font-style: normal;
